Mejorar ui y logica de hilos y captura
Se añadio formato en timestamp, como el buen manejo de metodos start/stop entre hilos con synchronized